--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.official-proproject=.
+file.reference.git-proproject-preprod=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.official-proproject}
+site.root.folder=${file.reference.git-proproject-preprod}
