--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.git-proproject-preprod=.
+file.reference.Desktop-mobilefresh=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.git-proproject-preprod}
+site.root.folder=${file.reference.Desktop-mobilefresh}
