--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,3 @@
-file.reference.Desktop-mobilefresh=.
+file.reference.newdesign-proproject-mobile=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.Desktop-mobilefresh}
+site.root.folder=${file.reference.newdesign-proproject-mobile}
